페이지를 완성해주어

--- a/minu-template.html
+++ b/minu-template.html
@@ -45,7 +45,7 @@
                 <div class="content wide">
                     <!-- You can use view option like "normal", "wide" -->
 
-                    <img src="cute.png" class="small left">
+                    <!-- <img src="cute.png" class="small left"> -->
                     <!-- img tag has options about 'size' and 'positioning' -->
                     <!-- size option / class = "large", "medium", "small", "xsmall" -->
                     <!-- positioning option / class = "center", "left", "right" -->
@@ -107,9 +107,17 @@
                     <div class="sapcer"></div>
                     <div class="right">오른쪽 정렬</div>
                     <div class="spacer"></div>
-                    <div class="right">을 지원합니다.</div>
+                    <div class="right">과 같은 정렬 기능도 지원합니다.</div>
                     <div class="spacer"></div>
-                    <div class="left">또한</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section" id="section3">
+            <div class="container">
+                <div class="content wide center">
+                    <div class="center">그리고</div>
+                    <div class="spacer"></div>
                     <div class="wide">이렇게 넓고 크고 광활하고 웅장하고 멋있고 신기해서 감탄이 절로 나오고 텍스트를 엄청나게 넣을 수 있어서 뭘 더 쳐야할지 모를 정도의 페이지 크기나
                     </div>
                 </div>
@@ -118,8 +126,11 @@
 
         <div class="section" id="section3">
             <div class="container">
-                <div class="content normal">
+                <div class="content normal center">
                     이렇게 좁고 작고 깜찍하고 귀엽고 사랑스럽고 이쁘고 깔끔해서 보기 좋은 페이지 크기를 지원합니다.
+                    <div class="spacer"></div>
+                    어떤가요? <br>
+                    좀 잘 만들었죠?
                 </div>
             </div>
         </div>
@@ -132,7 +143,8 @@
                     <div class="h1"># h1 클래스</div>
                     <div class="h2">## h2 클래스</div>
                     <div class="h3">### h3 클래스</div>
-                    일반 텍스트
+                    일반 텍스트 <br>
+                    <div class="small-text">작은 텍스트</div>
                     <div class="spacer"></div>
                     를 지원합니다.
                     <div class="spacer"></div>
@@ -177,36 +189,43 @@
         </div>
 
 
-        <div class="section" id="section4">
+        <div class="section" id="section6">
             <div class="container">
-                <div class="content wide bold strike italic">
-                    Thank You!
+                <div class="content wide">
+                    당연히 텍스트 말고 다른 것도 지원하죠!
+                    <div class="spacer"></div>
+                    <div class="light-quote">
+                        인용 표시 또한 당연히 지원합니다!
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="hr"></div>
+                    구분선 또한 지원하죠. <br>
+                    <ul>
+                        <li>리스트도</li>
+                        <li>이쁘게</li>
+                        <li>지원합니다.</li>
+                    </ul>
+                    <div class="spacer"></div>
+                    그리고 <span class="bold">모바일 반응형</span> 또한 구현이 되어있습니다. <br>
+                    언제 어디서든 편하게 페이지를 볼 수 있는 거죠.
+                    <div class="spacer"></div>
+                    <div class="bold">
+                        미누 템플릿은 <br>
+                        사실상 노션의 모든 것을 다 담았다고 할 수 있어요!
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="section" id="section5">
+        <div class="section" id="section7">
             <div class="container">
                 <div class="content wide">
-                    <div class="h1">
-                        안녕
-                    </div>
-                    <div class="h2">
-                        하세요
-                    </div>
-                    <div class="h3 italic">
-                        이거는
-                    </div>
-                    테스트입니다.
-                    <div class="hr"></div>
-                    <div class="light-quote">
-                        후움
-                    </div>
-                    <br>
-                    안녕하세요.
-                    <ul>
-                        <li>hello</li>
-                        <li>world!</li>
-                    </ul>
+                    <div class="h2">미누 템플릿 괜찮지 않나요?</div>
+                    <div class="spacer"></div>
+                    <div class="h3">그렇다면 당신도 지금 바로 시작하세요!</div>
+                    <div class="spacer"></div>
+                    <a class="light-mode bold center" href="https://guthub.com/min-uuu/minu-template">깃허브 바로 가기</a>
+                    <div class="spacer"></div>
+                    <div class="gray">Made by Min You</div>
                 </div>
             </div>
         </div>
