로고 이미지 추가

--- a/minu-template.html
+++ b/minu-template.html
@@ -45,7 +45,7 @@
                 <div class="content wide">
                     <!-- You can use view option like "normal", "wide" -->
 
-                    <!-- <img src="cute.png" class="small left"> -->
+                    <img src="minu-logo.png" class="xsmall left">
                     <!-- img tag has options about 'size' and 'positioning' -->
                     <!-- size option / class = "large", "medium", "small", "xsmall" -->
                     <!-- positioning option / class = "center", "left", "right" -->
