링크를 것허브에서 깃허브로 수정해주어

--- a/minu-template.html
+++ b/minu-template.html
@@ -223,7 +223,7 @@
                     <div class="spacer"></div>
                     <div class="h3">그렇다면 당신도 지금 바로 시작하세요!</div>
                     <div class="spacer"></div>
-                    <a class="light-mode bold center" href="https://guthub.com/min-uuu/minu-template">깃허브 바로 가기</a>
+                    <a class="light-mode bold center" href="https://github.com/min-uuu/minu-template">깃허브 바로 가기</a>
                     <div class="spacer"></div>
                     <div class="gray">Made by Min You</div>
                 </div>
