이름을 수정해주어

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- css link -->
     <link rel="stylesheet" type="text/css" href="fullpage.css" />
-    <link rel="stylesheet" type="text/css" href="minu-template.css">
+    <link rel="stylesheet" type="text/css" href="minu-page.css">
 
     <!-- web font - nanum square -->
     <!-- You can change font but size of them may change too  -->
@@ -66,7 +66,7 @@
                     <div class="spacer"></div>
 
                     <div>
-                        Do you want <a class="light-mode" href="minu-template-english.html">English?</a>
+                        Do you want <a class="light-mode" href="minu-page-english.html">English?</a>
                     </div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
     </div>
     <!-- js part -->
     <script type="text/javascript" src="fullpage.js"></script>
-    <script type="text/javascript" src="minu-template.js"></script>
+    <script type="text/javascript" src="minu-page.js"></script>
 </body>
 
 </html>
