--- a/minu-page-english..html
+++ b/minu-page-english..html
@@ -10,7 +10,7 @@
 
     <!-- css link -->
     <link rel="stylesheet" type="text/css" href="fullpage.css" />
-    <link rel="stylesheet" type="text/css" href="minu-template.css">
+    <link rel="stylesheet" type="text/css" href="minu-page.css">
 
     <!-- web font - nanum square -->
     <!-- You can change font but size of them may change too  -->
@@ -145,7 +145,7 @@
     </div>
     <!-- js part -->
     <script type="text/javascript" src="fullpage.js"></script>
-    <script type="text/javascript" src="minu-template.js"></script>
+    <script type="text/javascript" src="minu-page.js"></script>
 </body>
 
 </html>
