내용을 수정해주어

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="author" content="Min You">
-    <meta name="description" content="Notion like web template made with fullpage.js">
+    <meta name="description" content="노션노션한 웹 템플릿, 미누 페이지">
 
     <!-- page title -->
-    <title>minu template</title>
+    <title>미누 페이지</title>
 
     <!-- css link -->
     <link rel="stylesheet" type="text/css" href="fullpage.css" />
@@ -53,13 +53,13 @@
                     <div class="spacer"></div>
                     <!-- you can use class = "spacer" for space between content -->
 
-                    <div class="h1">미누 템플릿</div>
+                    <div class="h1">미누 페이지</div>
                     <!-- There is a options for text form / class = "h1", "h2", "h3", "smaill-text"-->
 
-                    <div class="h2">노션 스타일 <span class="blue">웹 템플릿</span> made with
+                    <div class="h2">노션노션한 웹 템플릿, <span class="blue">미누 페이지</span>
                         <!-- you can use 'span' tag for inline text edit -->
 
-                        <a class="light-mode orange" href="https://github.com/alvarotrigo/fullpage.js">fullpage.js</a>
+                        <!-- <a class="light-mode orange" href="https://github.com/alvarotrigo/fullpage.js">fullpage.js</a> -->
                         <!-- you can use 'a' tag with class ="light-mode", "dark-mode" and also you can chage colors -->
                     </div>
 
