내용을 수정해주어

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="h1">미누 페이지</div>
                     <!-- There is a options for text form / class = "h1", "h2", "h3", "smaill-text"-->
 
-                    <div class="h2">노션노션한 웹 템플릿, <span class="blue">미누 페이지</span>
+                    <div class="h2">노션노션한 웹 템플릿, <span class="red">미누 페이지</span>
                         <!-- you can use 'span' tag for inline text edit -->
 
                         <!-- <a class="light-mode orange" href="https://github.com/alvarotrigo/fullpage.js">fullpage.js</a> -->
@@ -219,7 +219,7 @@
         <div class="section" id="section7">
             <div class="container">
                 <div class="content wide">
-                    <div class="h2">미누 템플릿 괜찮지 않나요?</div>
+                    <div class="h2"><span class="red">미누 페이지</span> 괜찮지 않나요?</div>
                     <div class="spacer"></div>
                     <div class="h3">그렇다면 당신도 지금 바로 시작하세요!</div>
                     <div class="spacer"></div>
