--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
             <div class="container">
                 <div class="content wide left">
-                    <h1>미누 템플릿을 소개합니다!</h1>
+                    <h1><span class="red">미누 페이지</span>를 소개합니다!</h1>
                     <h2>노션노션한데 <br>이쁘고 편하기까지 해요.</h2>
-                    미누 템플릿은 노션을 웹페이지에서도 편하게 사용해보자! <br>
-                    라는 생각으로 만들어진 <span class="">라이브러리</span>입니다.
+                    <span class="red">미누 페이지</span>는 노션을 웹페이지에서도 편하게 사용해보자! <br>
+                    라는 생각으로 만들어진 <span class="blue">웹 템플릿</span>입니다.
                     <div class="spacer"></div>
                     거의 대부분의 디자인 요소를 노션의 모습을 본따서 제작했습니다. <br>
                     거기에 그치지 않고, 노션보다 자유도를 더 높였죠. <br>
@@ -97,7 +97,7 @@
         <div class="section" id="section2">
             <div class="container dark-mode">
                 <div class="content wide">
-                    미누 탬플릿은 라이트 모드와 다크모드를 모두 지원합니다.
+                    <span class="red">미누 페이지</span>는 라이트 모드와 다크모드를 모두 지원합니다.
                     <div class="spacer"></div>
                     그리고
                     <div class="spacer"></div>
@@ -138,7 +138,7 @@
         <div class="section" id="section4">
             <div class="container">
                 <div class="content wide">
-                    미누 탬플릿의 텍스트는
+                    <span class="red">미누 페이지</span>의 텍스트는
                     <div class="spacer"></div>
                     <div class="h1"># h1 클래스</div>
                     <div class="h2">## h2 클래스</div>
@@ -159,7 +159,7 @@
         <div class="section" id="section5">
             <div class="container">
                 <div class="content wide">
-                    또한 미누 템플릿은 다양한 글자색과 배경색을 지원하며 <br>
+                    또한 <span class="red">미누 페이지</span>는 다양한 글자색과 배경색을 지원하며 <br>
                     모든 색은 노션의 색과 같습니다!
                     <div class="spacer"></div>
                     <span class="gray">회색</span>
@@ -210,7 +210,7 @@
                     언제 어디서든 편하게 페이지를 볼 수 있는 거죠.
                     <div class="spacer"></div>
                     <div class="bold">
-                        미누 템플릿은 <br>
+                        <span class="red">미누 페이지</span>는 <br>
                         사실상 노션의 모든 것을 다 담았다고 할 수 있어요!
                     </div>
                 </div>
