--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="h1">미누 페이지</div>
                     <!-- There is a options for text form / class = "h1", "h2", "h3", "smaill-text"-->
 
-                    <div class="h2">노션노션한 웹 템플릿, <span class="red">미누 페이지</span>
+                    <div class="h2"><span class="gray-back">노션노션한</span> 웹 템플릿, <span class="red">미누 페이지</span>
                         <!-- you can use 'span' tag for inline text edit -->
 
                         <!-- <a class="light-mode orange" href="https://github.com/alvarotrigo/fullpage.js">fullpage.js</a> -->
@@ -79,9 +79,9 @@
 
             <div class="container">
                 <div class="content wide left">
-                    <h1><span class="red">미누 페이지</span>를 소개합니다!</h1>
+                    미누 페이지를 소개합니다!</h1>
                     <h2>노션노션한데 <br>이쁘고 편하기까지 해요.</h2>
-                    <span class="red">미누 페이지</span>는 노션을 웹페이지에서도 편하게 사용해보자! <br>
+                    미누 페이지는 노션을 웹페이지에서도 편하게 사용해보자! <br>
                     라는 생각으로 만들어진 <span class="blue">웹 템플릿</span>입니다.
                     <div class="spacer"></div>
                     거의 대부분의 디자인 요소를 노션의 모습을 본따서 제작했습니다. <br>
@@ -97,7 +97,7 @@
         <div class="section" id="section2">
             <div class="container dark-mode">
                 <div class="content wide">
-                    <span class="red">미누 페이지</span>는 라이트 모드와 다크모드를 모두 지원합니다.
+                    미누 페이지는 라이트 모드와 다크모드를 모두 지원합니다.
                     <div class="spacer"></div>
                     그리고
                     <div class="spacer"></div>
@@ -138,7 +138,7 @@
         <div class="section" id="section4">
             <div class="container">
                 <div class="content wide">
-                    <span class="red">미누 페이지</span>의 텍스트는
+                    미누 페이지의 텍스트는
                     <div class="spacer"></div>
                     <div class="h1"># h1 클래스</div>
                     <div class="h2">## h2 클래스</div>
@@ -159,7 +159,7 @@
         <div class="section" id="section5">
             <div class="container">
                 <div class="content wide">
-                    또한 <span class="red">미누 페이지</span>는 다양한 글자색과 배경색을 지원하며 <br>
+                    또한 미누 페이지는 다양한 글자색과 배경색을 지원하며 <br>
                     모든 색은 노션의 색과 같습니다!
                     <div class="spacer"></div>
                     <span class="gray">회색</span>
@@ -210,7 +210,7 @@
                     언제 어디서든 편하게 페이지를 볼 수 있는 거죠.
                     <div class="spacer"></div>
                     <div class="bold">
-                        <span class="red">미누 페이지</span>는 <br>
+                        미누 페이지는 <br>
                         사실상 노션의 모든 것을 다 담았다고 할 수 있어요!
                     </div>
                 </div>
@@ -219,7 +219,7 @@
         <div class="section" id="section7">
             <div class="container">
                 <div class="content wide">
-                    <div class="h2"><span class="red">미누 페이지</span> 괜찮지 않나요?</div>
+                    <div class="h2">미누 페이지, 괜찮지 않나요?</div>
                     <div class="spacer"></div>
                     <div class="h3">그렇다면 당신도 지금 바로 시작하세요!</div>
                     <div class="spacer"></div>
