폰트를 프리텐다드로 바꿔버렸어요 ^~^

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <link rel="stylesheet" type="text/css" href="fullpage.css" />
     <link rel="stylesheet" type="text/css" href="minu-page.css">
 
-    <!-- web font - nanum square -->
-    <!-- You can change font but size of them may change too  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+    <!-- web font - Pretendard -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
 </head>
 
 <!-- DON'T CHANGE id = "fullpage" & class = "section" -->
@@ -79,7 +76,7 @@
 
             <div class="container">
                 <div class="content wide left">
-                    미누 페이지를 소개합니다!</h1>
+                    <h1>미누 페이지를 소개합니다!</h1>
                     <h2>노션노션한데 <br>이쁘고 편하기까지 해요.</h2>
                     미누 페이지는 노션을 웹페이지에서도 편하게 사용해보자! <br>
                     라는 생각으로 만들어진 <span class="blue">웹 템플릿</span>입니다.
